## Process this file with automake to produce Makefile.in

# Set include directories
#INCLUDES =

# Define package included headers (to be installed)
#pkginclude_HEADERS = ctool.hpp

# Define sources for this directory
sources = ctool.cpp

# Build libtool library
noinst_LTLIBRARIES = libsupport.la
libsupport_la_SOURCES = $(sources)
